@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.10 2003/07/17 21:49:29 grant Exp $
+# $NetBSD: Makefile,v 1.11 2003/12/21 04:56:15 uebayasi Exp $
 # FreeBSD Id: Makefile,v 1.3 1999/01/08 03:32:06 itojun Exp $
 
-DISTNAME=	lv4495
-PKGNAME=	lv-4.49.5
+DISTNAME=	lv450
+PKGNAME=	lv-4.50
 WRKSRC=		${WRKDIR}/${DISTNAME}/build
 CATEGORIES=	misc
 MASTER_SITES=	http://www.ff.iij4u.or.jp/~nrt/freeware/
